# Testopus

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CNAME  LICENSE  README.md  conftest.py  environment.properties  index.html  local_ci_check.sh  mypy.ini  pyproject.toml  pyrightconfig.json  pytest.ini
.claude/: settings.json
.claude/adr/: 0001-driver-seam.md  0002-testiny-nl-authoring.md  0003-oss-demo-target-and-api-layer.md
.claude/agents/: ai-engineer.md  architect.md  backend-engineer.md  code-reviewer.md  data-engineer.md  devops-engineer.md  frontend-engineer.md  ml-engineer.md  qa-automation-engineer.md  tech-lead.md  writer.md
.claude/commands/: project-audit.md  team-council.md
.claude/council/: ai-driven-qa-and-claude-md-adoption.md
.claude/skills/docs-first/: SKILL.md
.claude/skills/flaky-triage/: SKILL.md
.claude/skills/testopus-nl-test/: SKILL.md
.claude/skills/testopus-page-object/: SKILL.md
.claude/skills/testopus-run/: SKILL.md
.claude/skills/testopus-web-test/: SKILL.md
.cursor/rules/: python-best-practices.mdc
.github/: dependabot.yml
.github/actions/run-tests/: action.yml
.github/workflows/: test-allure-customizer.yml  test.yml
ci/: README.md  requirements.txt
ci/docs/: allure_customization_flow.md  github-actions.md  local-checks.md
ci/scripts/: __init__.py  customize_allure_report.py
ci/scripts/js/: __init__.py  branch_info.js  branch_position.js  date_formatter.js  error_handler.js  fix_404_errors.js  inline_date_formatter.js
ci/scripts/modules/: __init__.py  branch_info.py  cache_control.py  date_formatter.py  dummy_report.py  error_handling.py  history.py
ci/scripts/templates/: 401.html  404.html  __init__.py  cache_headers.html  dummy_report.html  fallback_401.html  fallback_404.html  inline_date_formatter.js.template  spinner_fix.css
ci/scripts/tests/: __init__.py  test_basic.py
ci/scripts/utils/: __init__.py  constants.py  file_utils.py
config/yaml_configs/: default.yaml  override.yaml
core/api/: client.py
core/config/: config_loader.py  schema.py
core/drivers/: base.py  factory.py  selenium_driver.py
core/pom/web/: base_page.py
core/pom/web/gasag/: login_page.py
core/pom/web/toolshop/: home_page.py  login_page.py
data/: behaviors.csv  behaviors.json  packages.json  suites.csv  suites.json  timeline.json
data/attachments/: 3f8540fcdd8a814.txt  5be5677351506ebc.txt  8c363f235f3b305f.txt  9122761d2ec82f56.txt  ce6d030afba55a93.txt  d75791b5a17ad346.txt
data/test-cases/: 1204f6f058117810.json  144d04a2715d45c1.json  14b1e8423f1b327b.json  151fb1cd643ee7fb.json  15b556e93d08c191.json  1ac5e71d3d4bae0a.json  1c890238c3468625.json  1da6582c57b55a8c.json  1e968ad77efdcda1.json  1ea5f57962dd7922.json  210b20bea0c750bf.json  211afd0064c7365a.json  2337dc697495287a.json  242bdca147f1076f.json  27ebf3e16870486.json  2b60d0ac79893388.json  2d419b3ace9360e7.json  2ef11cd5a0175f7.json  3296ad5314f4ae6f.json  332751ce8a09e035.json  40aab5dcb3227bb2.json  4255b0e6c3f9dd57.json  46c3b29fac7d3bea.json  47e703afeee74d96.json  48cec86b30cb7f9a.json  4b123942bd8cb569.json  4b2d43c902034264.json  4dbcf72db2ab268c.json  55c76191069111ca.json  5915a105ef513d0a.json  5b87d0a769b46299.json  6162e329b5a8d147.json  635f30ec6890834c.json  662413f6f05223e0.json  696e1a133bbe8eff.json  6de3ec75f62b9baf.json  6f979dee919c7c22.json  752db11676897070.json  755db402322ec747.json  7592edcc6d4ccd37.json  (+49 more)
docker/: Dockerfile  docker-compose.yml
docs/audit/: STATUS.md  antipatterns.md  best-practices.md  roadmap.md
docs/ci/: allure_customization_flow.md  github-actions.md
docs/testiny/: workflow.md
export/: influxDbData.txt  mail.html  prometheusData.txt
fixtures/: allure.py  cli.py  mocks.py  setup.py
history/: history.json
specs/gasag/: tc-1-login.md
specs/toolshop/: tc-1-login.md
tests/api_tests/: conftest.py  test_auth.py  test_categories.py  test_products.py
tests/internal_tests/: test_api_client.py  test_basic.py  test_config_loader.py  test_config_schema.py  test_drivers.py  test_framework.py  test_helpers.py  test_layering.py  test_redact.py  test_retry.py  test_testiny_client.py  test_testiny_normalize.py
tests/ui_tests/web/gasag/: test_gasag.py
tests/ui_tests/web/toolshop/: test_login.py  test_products.py  test_search.py
tools/testiny/: __main__.py  cli.py  client.py  normalize.py
utils/: ci_env.py  helpers.py  redact.py
widgets/: behaviors.json  duration-trend.json  duration.json  environment.json  severity.json  status-chart.json  suites.json  summary.json
