[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Testopus"
version = "0.0.1"
description = """A Python-based test automation framework combining Pytest, Selenium, Appium, Playwright, and AI/Google integrations under one roof. Streamline multi-platform testing with YAML-driven configs, POM architecture, and robust, extensible tooling."""
readme = "README.md"
requires-python = ">=3.12"
license-files = { paths = ["LICENSE.txt"] }
authors = [
  { name = "Alexander Wahl", email = "alexander@alexanderwahl.eu" },
]
keywords = [
  "automation",
  "testing",
  "pytest",
  "selenium",
  "appium",
  "playwright",
  "ai",
]

dependencies = [
  "pytest>=8.3.4",
  "pytest-asyncio>=0.25.3",
  "pytest-mock>=3.14.0",
  "pytest-xdist==3.6.1",
  "pytest-check==2.3.1",
  "selenium==4.29.0",
  "Appium-Python-Client==4.5.1",
  "playwright==1.50.0",
  "allure-pytest>=2.13.5",
  "responses>=0.25.6",
  "Faker==37.0.0",
  "pyscreenshot==3.1",
  "pyviztest==1.0.0",
  "pydantic>=2.10.6",
  "pydantic-ai==0.0.36",
  "langchain==0.1.12",
  "pyyaml>=6.0.2",
  "python-dotenv==1.0.1",
  "isort>=5.13.2",
  "requests>=2.31.0"
]

[tool.hatch.envs.default]
dependencies = [
  "black>=23.3.0",
  "mypy>=1.3.0",
  "ruff>=0.0.272",
]

[tool.hatch.envs.test]
dependencies = [
  "pytest>=8.3.4",
  "pytest-cov>=4.1.0",
  "pytest-mock>=3.14.0",
]

[tool.hatch.envs.test.scripts]
run = "pytest {args:tests}"
cov = "pytest --cov-report=term-missing --cov=src/testopus {args:tests}"

[tool.hatch.build.targets.wheel]
packages = ["src/testopus"]
