[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Testopus"
version = "0.0.1"
description = """A Python-based test automation framework combining Pytest, Selenium, Appium, Playwright, and AI/Google integrations under one roof. Streamline multi-platform testing with YAML-driven configs, POM architecture, and robust, extensible tooling."""
readme = "README.md"
requires-python = ">=3.12"
license-files = { paths = ["LICENSE.txt"] }
authors = [
  { name = "Alexander Wahl", email = "alexander@alexanderwahl.eu" },
]
keywords = [
  "automation",
  "testing",
  "pytest",
  "selenium",
  "appium",
  "playwright",
  "ai",
]

dependencies = [
  "pytest>=8.3.4",
  "pytest-asyncio>=0.25.3",
  "pytest-mock>=3.14.0",
  "pytest-xdist==3.6.1",
  "pytest-check==2.3.1",
  "selenium==4.29.0",
  "Appium-Python-Client==4.5.1",
  "playwright==1.50.0",
  "allure-pytest>=2.13.5",
  "responses>=0.25.6",
  "Faker==37.0.0",
  "pyscreenshot==3.1",
  "pyviztest==1.0.0",
  "pydantic>=2.10.6",
  "pydantic-ai==0.0.36",
  "langchain==0.1.12",
  "pyyaml>=6.0.2",
  "python-dotenv==1.0.1",
  "isort>=5.13.2",
  "requests>=2.31.0",
  "pytest-html>=3.2.0"
]

[tool.hatch.envs.default]
dependencies = [
  "black>=23.3.0",
  "mypy>=1.3.0",
  "ruff>=0.0.272",
]

[tool.hatch.envs.default.scripts]
format = "black src tests"
lint = "ruff check src tests"
typecheck = "mypy src"

[tool.hatch.envs.test]
dependencies = [
  "pytest>=8.3.4",
  "pytest-cov>=4.1.0",
  "pytest-mock>=3.14.0",
]

[tool.hatch.envs.test.scripts]
run = "pytest {args:tests}"
internal = "pytest {args:tests/internal_tests}"

# Using direct Allure integration instead of custom plugin
allure-report = "pytest --alluredir=reports/allure-results {args:tests}"
html-report = "pytest --html=reports/html/report.html --self-contained-html {args:tests}"
run-all-reports = "pytest --alluredir=reports/allure-results --html=reports/html/report.html {args:tests}"
view-allure = "allure serve reports/allure-results"
generate-allure = "allure generate reports/allure-results -o reports/allure-report --clean && allure open reports/allure-report"

[tool.hatch.envs.ui]
dependencies = [
  "pytest>=8.3.4",
  "selenium==4.29.0",
  "playwright==1.50.0",
]

[tool.hatch.envs.ui.scripts]
web = "pytest {args:tests/ui_tests/web}"
# Uncomment when mobile tests are added
# mobile = "pytest {args:tests/ui_tests/mobile}"

[tool.hatch.envs.api]
dependencies = [
  "pytest>=8.3.4",
  "requests>=2.31.0",
  "responses>=0.25.6",
]

[tool.hatch.envs.api.scripts]
run = "pytest {args:tests/api_tests}"

# Build configuration for wheel - fixes "Unable to determine which files to ship" error
[tool.hatch.build.targets.wheel]
packages = ["fixtures", "tests", "utils", "core", "config"]

# Docs environment - commented out until needed
# [tool.hatch.envs.docs]
# dependencies = [
#   "mkdocs>=1.5.3",
#   "mkdocs-material>=9.5.3",
#   "mkdocstrings>=0.24.0",
#   "mkdocstrings-python>=1.7.5"
# ]
# 
# [tool.hatch.envs.docs.scripts]
# build = "mkdocs build"
# serve = "mkdocs serve"
